--- a/SPRING/TFG-Patrones/src/main/resources/templates/admin/preguntas.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/admin/preguntas.html
@@ -46,7 +46,7 @@
 <!-- INFORMACION -->
 
 <h3 class="text-center text-warning pt-5">Preguntas</h3>
-<p class="text-center text-white pt-4">A continuación se muestran todos los campos que tiene una pregunta. Despues una lista de preguntas donde se pueden editar todas las preguntas de la aplicación. Al pulsar actualizar se eliminaran las existentes y se actualizaran con la nueva versión.</p>
+<p class="text-center text-white pt-4">A continuación se muestran todos los campos que tiene una pregunta. Despues una lista de preguntas donde se pueden editar todas las preguntas de la aplicación.</br> Al pulsar actualizar se eliminaran las existentes y se actualizaran con la nueva versión.</p>
 </br>
 
 <!-- DEFINICION -->
