Ultimos cambios prememoria

--- a/SPRING/TFG-Patrones/src/main/resources/templates/admin/admin.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/admin/admin.html
@@ -19,7 +19,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" >
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link text-light" href="/admin">Inicio</a>
@@ -57,9 +57,9 @@
 <p class="text-center text-secondary pt-4">Nota: Es posible que tengas que sustituir ['HOST_IP:8080'] por la dirrecion del servidor a la que accedes.</p>
 
 <div class="row">
-    <div class="col-8 ">
+    <div class="col-8 " style="padding: 50px; font-size: 110%; width: 70.00%; margin: 0px auto; text-align: justify; text-justify: inter-word;">
         <pre>
-        <code class="text-center text-danger ">
+        <code class="text-center " style="color: #ffcc33">
         # my global config <br>
         global: <br>
         scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute. <br>
