--- a/SPRING/TFG-Patrones/src/main/resources/templates/admin/configuracion.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/admin/configuracion.html
@@ -51,9 +51,9 @@
 </br>
 
 <div class="row">
-    <div class="col-8 ">
+    <div class="col-8 " style="padding: 50px; font-size: 100%; width: 100.00%; margin: 0px auto; text-align: justify; text-justify: inter-word;">
         <pre>
-        <code class="text-center text-danger ">
+       <code class="text-center " style="color: #ffcc33">
             #Metricas. Usadas para la exportación de datos y su lectura.
             management.metrics.export.prometheus.pushgateway.enabled=true
             management.endpoint.metrics.enabled=true
