--- a/SPRING/TFG-Patrones/src/main/resources/templates/admin/preguntas.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/admin/preguntas.html
@@ -51,10 +51,10 @@
 
 <!-- DEFINICION -->
 
-<div class="row">
-    <div class="col-8 ">
-        <pre>
-        <code class="text-center text-danger ">
+<div class="row" >
+    <div class="col-8 " style="padding: 50px; font-size: 110%; width: 70.00%; margin: 0px auto; text-align: justify; text-justify: inter-word;">
+        <pre >
+        <code class="text-center " style="color: #ffcc33">
             <p class="text-center  text-white pt-3">Cabecera para marcar el inicio de una pregunta.</p>
            &lt;PREGUNTA&gt;<br>
             <p class="text-center  text-white pt-3">En orden encontraremos la prioridad respecto a otras preguntas.</p>
