--- a/SPRING/TFG-Patrones/src/main/resources/templates/admin/patrones.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/admin/patrones.html
@@ -52,9 +52,9 @@
 <!-- DEFINICION -->
 
 <div class="row">
-    <div class="col-8 ">
+    <div class="col-8 " style="padding: 50px; font-size: 110%; width: 70.00%; margin: 0px auto; text-align: justify; text-justify: inter-word;">
         <pre>
-        <code class="text-center text-danger ">
+        <code class="text-center " style="color: #ffcc33">
             <p class="text-center  text-white pt-3">Cabecera para marcar el inicio de una pregunta.</p>
             &lt;PATRON&gt;<br>
             <p class="text-center  text-white pt-3">El nombre del patron. Lo identificará para referenciarse desde preguntas o URL.</p>
