Cambios pre presentacion

--- a/SPRING/TFG-Patrones/src/main/resources/templates/patrones.html
+++ b/SPRING/TFG-Patrones/src/main/resources/templates/patrones.html
@@ -57,10 +57,10 @@
                     <td colspan="2"> Servicio de patrones no disponible </td>
                 </tr>
                 <tr th:each="patron : ${patrones}">
-                    <td class="text-info"><span th:text="${patron.nombre}"></span></td>
-                    <td><span th:text="${patron.resumen}"></span></td>
+                    <td class="text-info"><span th:text="${patron.nombre}" ></span></td>
+                    <td ><span th:text="${patron.resumen}"></span></td>
                     <td>
-                        <a href="somepage.html"  th:href="@{'/patron' (n=${patron.nombre})}">VER PATRÓN</a>
+                        <a href="somepage.html"  th:href="@{'/patron' (n=${patron.nombre})}">DOCUMENTACIÓN</a>
                     </td>
                 </tr>
             </tbody>
